--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+    <head>
+        <link rel="stylesheet"href="style.css"/>
+    </head>
     <body>
         <header>
             <img src="https://mars.algoritmika.org/uploads/2020/12/logo_0_1608844038.svg" width="70px"/>
